# fastapi-oracle-test-stuff

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Brewfile  Dockerfile  Justfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml  precommit-autoupdate.yaml  pypi-release.yaml
sql/: seed.sql
src/fastapi_oracle_test_stuff/: config.py  main.py
src/fastapi_oracle_test_stuff/models/: __init__.py  authors.py  books.py
src/fastapi_oracle_test_stuff/routers/: __init__.py
src/fastapi_oracle_test_stuff/routers/authors/: router.py  service.py
src/fastapi_oracle_test_stuff/routers/books/: router.py  service.py
test/: conftest.py  says_hello_test.py
test/routers/authors/: conftest.py  router_test.py  service_test.py
test/routers/books/: conftest.py  router_test.py  service_test.py
