[project]
name = "fastapi-oracle-test-stuff"
version = "0.1.0"
description = "A FastAPI example app backed by a free Oracle database, used to try out the connection and libraries."
readme = "README.md"
authors = [
    { name = "Galen Rice", email = "griceturrble@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "granian[dotenv]>=2.7.9",
    "httpx2>=2.7.0",
    "oracledb>=4.0.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
]

[project.scripts]
project = "fastapi_oracle_test_stuff:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "granian[reload]>=2.7.9",
    "ruff>=0.15.21",
]


[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = """
--verbose
--cov=fastapi_oracle_test_stuff
--no-cov-on-fail
--cov-branch
--cov-report=term-missing
--cov-report=html:pytest_cov
"""

# Recommended ruff linting options
# For more details see: https://docs.astral.sh/ruff/configuration/

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "FA",   # flake8-future-annotations
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "NPY",  # numpy-specific
    "PERF", # performance
    "PGH",  # pygrep-hooks
    "PL",   # Pylint
    "S",    # flake8-bandit (security checks)
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

# Ignore certain rules across the entire repo
# (after selecting a set of rules like 'E', ignore subsets of those rules here)
ignore = [
    # Selected ignore rules
    "E203",    # whitespace-before-punctuation
    "PLR0913", # too-many-arguments
    # Rules recommended to avoid when using Ruff formatter
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "D206",   # indent-with-spaces
    "D300",   # triple-single-quotes
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "W191",   # tab-indentation
]

# Attempt to auto-fix if running `ruff check . --fix`
fixable = [
    "F401", # unused-import
    "I",  # isort
    "UP", # pyupgrade
]

# Avoid fixing these when using `--fix`.
unfixable = [
    "B", # flake8-bugbear
]

# Skip checking any files matching glob patterns:
# exclude = ["**/test/**/*.*"]

# Exclude rules from being applied to files matching glob patterns:
[tool.ruff.lint.per-file-ignores]
"**/*test.py" = [
    "F811",    # redefined-while-unused
    "N",       # pep8-naming
    "PLR2004", # magic-value-comparison
    "S101",    # assert
]
